# memos

./: .gitignore  README.md  pubspec.yaml  pyproject.toml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/memo/memo/memos/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
memos/: manage.py
memos/memos/: asgi.py  urls.py  wsgi.py
memos/memos/setting/: base.py  development.py
memos/user/: models.py  serializers.py  urls.py  views.py
test/: widget_test.dart
