[tool.poetry]
name = "memos"
version = "0.1.0"
description = ""
authors = ["hyeonprojects <axzswq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}
djangorestframework = "^3.14.0"
markdown = "^3.5.2"
django-filter = "^23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
